Add WeeklyChildStats with CRUD, chore and child updates, and scheduled weekly creation